--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@taskyz/eslint-config",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Eslint shared configuration",
   "main": "index.js",
   "files": [
@@ -8,7 +8,7 @@
   ],
   "author": "@farischt",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
