--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,8 +2,6 @@ name: Publish NPM package
 
 on:
   push:
-    branches:
-      - main
     tags:
       - v*.*.*
       - v*.*.*-*-*
@@ -24,11 +22,21 @@ jobs:
           registry-url: https://npm.pkg.github.com
           cache: npm
 
+      - name: Check tag version with package.json version
+        run: |
+          TAG_VERSION=$(echo $GITHUB_REF | sed -n 's/refs\/tags\/v\([0-9]*\.[0-9]*\.[0-9]*\(-[a-zA-Z0-9]*\)\?\)/\1/p')
+          PACKAGE_VERSION=$(node -p "require('./package.json').version")
+
+          if [ "$TAG_VERSION" != "$PACKAGE_VERSION" ]; then
+            echo "Tag version ($TAG_VERSION) does not match package.json version ($PACKAGE_VERSION)"
+            exit 1
+          fi
+
       - name: Install dependencies
         run: npm ci
 
       - name: Update version
-        run: npm version --allow-same-version --no-git-tag-version $(git describe --tags)
+        run: npm version $TAG_VERSION --allow-same-version
 
       - name: Publish to GitHub Packages
         run: npm publish
