--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
   "name": "@taskyz/eslint-config",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "Eslint shared configuration",
   "main": "index.js",
   "files": [
     "./index.js"
   ],
+  "keywords": [
+    "eslint",
+    "eslintconfig"
+  ],
   "author": "@farischt",
   "license": "ISC",
-  "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-simple-import-sort": "^10.0.0"
+  "peerDependencies": {
+    "@typescript-eslint/eslint-plugin": ">=5",
+    "eslint": ">=8.56",
+    "eslint-config-prettier": ">=9",
+    "eslint-plugin-import": ">=2.29",
+    "eslint-plugin-prettier": ">=5.1",
+    "eslint-plugin-simple-import-sort": ">=10"
   }
 }
