--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          registry-url: https://npm.pkg.github.com
+          registry-url: https://registry.npmjs.org
           cache: npm
 
       - name: Check tag version with package.json version
@@ -38,7 +38,7 @@ jobs:
       - name: Update version
         run: npm version $TAG_VERSION --allow-same-version
 
-      - name: Publish to GitHub Packages
-        run: npm publish
+      - name: Publish to NPM
+        run: npm publish --access=public
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTOMATION_TOKEN }}
