--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "@taskyz/eslint-config": "*",
+    "@taskyz/eslint-config": "^1.0.12",
     "@taskyz/prettier-config": "^1.0.2",
     "eslint": "^8.56.0",
     "prettier": "^3.2.4"
